k8s/service-app.yml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: myapp
spec:
  selector:
    app: app
  ports:
    - port: 5000
